--- a/FixtureFetcherService/Dockerfile
+++ b/FixtureFetcherService/Dockerfile
@@ -9,15 +9,14 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["FixtureFetcherService/FixtureFetcherService.csproj", "FixtureFetcherService/"]
-RUN dotnet restore "./FixtureFetcherService/./FixtureFetcherService.csproj"
+COPY ["FixtureFetcherService.csproj", "."]
+RUN dotnet restore "FixtureFetcherService.csproj"
 COPY . .
-WORKDIR "/src/FixtureFetcherService"
-RUN dotnet build "./FixtureFetcherService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "FixtureFetcherService.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./FixtureFetcherService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "FixtureFetcherService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
